# dice-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
agent/dataset/: sequence.py
agent/eval/: eval_agent.py  eval_diffusion_agent.py  eval_pretrained_flow.py
agent/finetune/: train_agent.py  train_distill_residual_flow_agent.py  train_distill_residual_flow_img_agent.py  train_ppo_diffusion_agent.py  train_ppo_diffusion_img_agent_new.py
agent/pretrain/: train_agent.py  train_diffusion_agent.py  train_diffusion_img_agent.py  train_flow_matching_agent.py  train_flow_matching_img_agent.py
env/furniture-bench/: .gitignore  setup.py
env/gym_utils/: __init__.py
env/pusht/: __init__.py  pusht_env.py  pusht_image_env.py  pusht_keypoint_manager.py  pusht_keypoints_env.py  pymunk_override.py  replay_buffer.py  test_dataset.py
model/common/: mlp.py
model/diffusion/: conditional_unet1d.py  diffusion.py  diffusion_ppo.py  diffusion_vpg.py  mlp_diffusion.py  vision_resnet_mlp_diffusion.py
model/flow_matching/: flow_matching.py  mlp_flow_matching.py  vision_resnet_mlp_flow_matching.py
model/rl/: distill_residual_rl.py  distill_residual_rl_img.py  distill_residual_rl_img_in_question.py  distill_residual_rl_in_question.py
script/: download_hf.sh  eval_rl_checkpoint.py  run.py  set_path.sh  train_distill_flow.py
script/dataset/: README.md  process_pusht_dataset.py  process_robomimic_dataset.py  robomimic_dataset_conversion.py
util/: hybrid_replay_buffer.py  replay_buffer.py  robomimic_util.py  rotation_conversion.py  state_visualization.py
(+80 files in other folders)
